--- a/about-us.html
+++ b/about-us.html
@@ -24,7 +24,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3813440122"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4099980633"/>
-  <link rel="stylesheet" type="text/css" href="css/about-us.css?crc=3911284366" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/about-us.css?crc=4035424807" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=284682425" id="nomq_pagesheet"/>
@@ -35,7 +35,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/dosis:n3,n7:default.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/pOhdEO0lXBF0We3g80QDoGdGK6783AUNi3wzucPbS6vfenIgfOPe9sJGwQwkFDqkFBvtZQ63wQJk5QbtFc935AwtjRqkZcZKFDJXjcbDZ2JXwUG_HKoTjAuC-AZ8jhyuScFGOcNkZkUTjAuC-AZ8jhyuScFGOcNkZkUaiaS0-ABlde8cZAFGiW4R-fozScSKgagzSYgTd1w7f6K4TbJbMg62JMJ7f6KPTbJbMg6YJMJ7f6KYTbJbMg6fJMJ7f6KHTbJbMg6FJM4HgIuuShAbMjYvTpIB.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/xiR-tUx3M33u6jSrF_7pTii31ZrSMfCgSL7VpjNPo2XfenIgfOPe9sJGwQwkFDqkFBvtZQ63wQJk5QbtFc935AwtjRqkZcZKFDJXjcbDZ2JXwUG_HKoTjAuC-AZ8jhyuScFGOcNkZkUTjAuC-AZ8jhyuScFGOcNkZkUaiaS0-ABlde8cZAFGiW4R-fozScSKgagzSYgTd1w7f6K4TbJbMg62JMJ7f6KPTbJbMg6YJMJ7f6KYTbJbMg6fJMJ7f6KHTbJbMg6FJM4HgIuuShAbMpPLT0IB.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -51,9 +51,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div class="clip_frame grpelem" id="u4112"><!-- image -->
         <img class="block" id="u4112_img" src="images/life2.png?crc=4143500431" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51"/>
        </div>
-       <div class="clearfix grpelem" id="u4114-4"><!-- content -->
-        <p id="u4114-2"><span class="Menu-Buttons" id="u4114">ABOUT US</span></p>
-       </div>
+       <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u4114-4" href="about-us.html"><!-- content --><p id="u4114-2"><span class="Menu-Buttons" id="u4114">ABOUT US</span></p></a>
        <a class="nonblock nontext clearfix grpelem" id="u4105-4" href="get-involved.html"><!-- content --><p id="u4105-2"><span class="Menu-Buttons" id="u4105">GET INVOLVED</span></p></a>
        <a class="nonblock nontext clearfix grpelem" id="u4106-4" href="prayer.html"><!-- content --><p id="u4106-2"><span class="Menu-Buttons" id="u4106">PRAYER</span></p></a>
        <a class="nonblock nontext clearfix grpelem" id="u4115-4" href="testimony.html"><!-- content --><p id="u4115-2"><span class="Menu-Buttons" id="u4115">TESTIMONY</span></p></a>
@@ -77,9 +75,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <a class="nonblock nontext clip_frame grpelem" id="u7829" href="https://www.facebook.com/iamlifechurchinternational"><!-- image --><img class="block" id="u7829_img" src="images/facebook-logo-png-white-i6.png?crc=156772510" alt="" data-heightwidthratio="1" data-image-width="31" data-image-height="31"/></a>
     <a class="nonblock nontext clip_frame grpelem" id="u7827" href="https://www.youtube.com/channel/UC0j6LdYbIiEUvPGAGrfPJlg?"><!-- image --><img class="block" id="u7827_img" src="images/youtube.png?crc=394888956" alt="" data-heightwidthratio="1" data-image-width="30" data-image-height="30"/></a>
     <a class="nonblock nontext clip_frame grpelem" id="u7835" href="index.html"><!-- image --><img class="block" id="u7835_img" src="images/life2.png?crc=4143500431" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51"/></a>
-    <div class="clearfix grpelem" id="u7838-4"><!-- content -->
-     <p id="u7838-2"><span class="Menu-Buttons" id="u7838">ABOUT US</span></p>
-    </div>
+    <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u7838-4" href="about-us.html"><!-- content --><p id="u7838-2"><span class="Menu-Buttons" id="u7838">ABOUT US</span></p></a>
     <a class="nonblock nontext clearfix grpelem" id="u7794-4" href="testimony.html"><!-- content --><p id="u7794-2"><span class="Menu-Buttons" id="u7794">TESTIMONY</span></p></a>
     <a class="nonblock nontext clearfix grpelem" id="u7834-4" href="events.html"><!-- content --><p id="u7834-2"><span class="Menu-Buttons" id="u7834">EVENTS</span></p></a>
     <a class="nonblock nontext clearfix grpelem" id="u7795-4" href="prayer.html"><!-- content --><p id="u7795-2"><span class="Menu-Buttons" id="u7795">CONTACT</span></p></a>
