--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3813440122"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4099980633"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3834444871" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3935023656" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=284682425" id="nomq_pagesheet"/>
@@ -35,7 +35,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/dosis:n3,n7:default.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/J7dPBfda71pygh9obKR2opddmNqmQyhP8KDt73fZHawfenXgfOPe9sJGwQwkFDqkFBvtZQ63wQJk5QbtFc935AwtjRqkZcZKFDJXjcbDZ2JXwUG_HKoTjAuC-AZ8jhyuScFGOcNkZkUTjAuC-AZ8jhyuScFGOcNkZkUaiaS0-ABlde8cZAFGiW4R-fozScSKgagzSYgTd1w7f6K4TbJbMg62JMJ7f6KPTbJbMg6YJMJ7f6K5TbJbMg6BJMJ7f6KHTbJbMg6FJMJ7f6K9TbJbMg6JJM4HgIuuShAbMLx_TpIB.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/RqtdsLSoIbBS0aC3YneyU0FmrkyHbQ-Y6nPrlNNuXctfenXgfOPe9sJGwQwkFDqkFBvtZQ63wQJk5QbtFc935AwtjRqkZcZKFDJXjcbDZ2JXwUG_HKoTjAuC-AZ8jhyuScFGOcNkZkUTjAuC-AZ8jhyuScFGOcNkZkUaiaS0-ABlde8cZAFGiW4R-fozScSKgagzSYgTd1w7f6K4TbJbMg62JMJ7f6KPTbJbMg6YJMJ7f6K5TbJbMg6BJMJ7f6KHTbJbMg6FJMJ7f6K9TbJbMg6JJM4HgIuuShAbMp5LT0IB.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -58,9 +58,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <div class="clip_frame grpelem" id="u4112"><!-- image -->
          <img class="block" id="u4112_img" src="images/life2.png?crc=4143500431" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51"/>
         </div>
-        <div class="clearfix grpelem" id="u4114-4"><!-- content -->
-         <p id="u4114-2"><span class="Menu-Buttons" id="u4114">ABOUT US</span></p>
-        </div>
+        <a class="nonblock nontext clearfix grpelem" id="u4114-4" href="about-us.html"><!-- content --><p id="u4114-2"><span class="Menu-Buttons" id="u4114">ABOUT US</span></p></a>
         <a class="nonblock nontext clearfix grpelem" id="u4105-4" href="get-involved.html"><!-- content --><p id="u4105-2"><span class="Menu-Buttons" id="u4105">GET INVOLVED</span></p></a>
         <a class="nonblock nontext clearfix grpelem" id="u4106-4" href="prayer.html"><!-- content --><p id="u4106-2"><span class="Menu-Buttons" id="u4106">PRAYER</span></p></a>
         <a class="nonblock nontext clearfix grpelem" id="u4115-4" href="testimony.html"><!-- content --><p id="u4115-2"><span class="Menu-Buttons" id="u4115">TESTIMONY</span></p></a>
@@ -97,19 +95,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext grpelem" id="u5689" href="study.html"><!-- state-based BG images --><div class="fluid_height_spacer"></div></a>
      <a class="nonblock nontext grpelem" id="u5662" href="testimony.html"><!-- rasterized frame --><img id="u5662_img" alt="" src="images/testify1-u5662.png?crc=339134378" data-image-width="173"/></a>
      <a class="nonblock nontext grpelem" id="u5653" href="get-involved.html"><!-- rasterized frame --><img id="u5653_img" alt="" src="images/serve1-u5653.png?crc=525546933" data-image-width="154"/></a>
-     <div class="clip_frame grpelem" id="u5728"><!-- image -->
-      <img class="block" id="u5728_img" src="images/life%20church.png?crc=4023458185" alt="" data-heightwidthratio="0.3497536945812808" data-image-width="406" data-image-height="142"/>
-     </div>
-     <img class="grpelem" id="u5740-4" alt="INTERNATIONAL" src="images/u5740-4.png?crc=4081565100" data-image-width="424"/><!-- rasterized frame -->
+     <img class="grpelem" id="u5740-4" alt="INTERNATIONAL" src="images/u5740-4.png?crc=3882501394" data-image-width="424"/><!-- rasterized frame -->
      <a class="nonblock nontext clearfix grpelem" id="u6234-4" href="get-involved.html"><!-- content --><p id="u6234-2"><span class="Menu-Buttons" id="u6234">GET INVOLVED</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u6235-4" href="prayer.html"><!-- content --><p id="u6235-2"><span class="Menu-Buttons" id="u6235">PRAYER</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u6236-4" href="give.html"><!-- content --><p id="u6236-2"><span class="Menu-Buttons" id="u6236">GIVE</span></p></a>
      <a class="nonblock nontext clip_frame grpelem" id="u6237" href="https://www.facebook.com/iamlifechurchinternational"><!-- image --><img class="block" id="u6237_img" src="images/facebook-logo-png-white-i6.png?crc=156772510" alt="" data-heightwidthratio="1" data-image-width="31" data-image-height="31"/></a>
      <a class="nonblock nontext clip_frame grpelem" id="u6239" href="https://www.youtube.com/channel/UC0j6LdYbIiEUvPGAGrfPJlg?"><!-- image --><img class="block" id="u6239_img" src="images/youtube.png?crc=394888956" alt="" data-heightwidthratio="1" data-image-width="30" data-image-height="30"/></a>
      <a class="nonblock nontext MuseLinkActive clip_frame grpelem" id="u6241" href="index.html"><!-- image --><img class="block" id="u6241_img" src="images/life2.png?crc=4143500431" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51"/></a>
-     <div class="clearfix grpelem" id="u6243-4"><!-- content -->
-      <p id="u6243-2"><span class="Menu-Buttons" id="u6243">ABOUT US</span></p>
-     </div>
+     <a class="nonblock nontext clearfix grpelem" id="u6243-4" href="about-us.html"><!-- content --><p id="u6243-2"><span class="Menu-Buttons" id="u6243">ABOUT US</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u6244-4" href="testimony.html"><!-- content --><p id="u6244-2"><span class="Menu-Buttons" id="u6244">TESTIMONY</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u6245-4" href="events.html"><!-- content --><p id="u6245-2"><span class="Menu-Buttons" id="u6245">EVENTS</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u6246-4" href="prayer.html"><!-- content --><p id="u6246-2"><span class="Menu-Buttons" id="u6246">CONTACT</span></p></a>
@@ -173,16 +166,21 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
    </div>
    <div class="verticalspacer" data-offset-top="1923" data-content-above-spacer="1915" data-content-below-spacer="51" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-   <div class="browser_width grpelem" id="u3077-bw">
-    <div id="u3077"><!-- group -->
-     <div class="clearfix" id="u3077_align_to_page">
-      <div class="clearfix grpelem" id="u3080-6"><!-- content -->
-       <p id="u3080-2">Life Church International&nbsp;&nbsp;&nbsp;&nbsp; 2019</p>
-       <p id="u3080-3">&nbsp;</p>
-       <p>&nbsp;</p>
-      </div>
-      <div class="clip_frame grpelem" id="u3333"><!-- image -->
-       <img class="block" id="u3333_img" src="images/copyright.png?crc=3973042440" alt="" data-heightwidthratio="1" data-image-width="13" data-image-height="13"/>
+   <div class="clearfix grpelem" id="pu8210"><!-- column -->
+    <div class="clip_frame colelem" id="u8210"><!-- image -->
+     <img class="block" id="u8210_img" src="images/lifechurch4.png?crc=3804901615" alt="" data-heightwidthratio="0.34513274336283184" data-image-width="452" data-image-height="156"/>
+    </div>
+    <div class="browser_width colelem" id="u3077-bw">
+     <div id="u3077"><!-- group -->
+      <div class="clearfix" id="u3077_align_to_page">
+       <div class="clearfix grpelem" id="u3080-6"><!-- content -->
+        <p id="u3080-2">Life Church International&nbsp;&nbsp;&nbsp;&nbsp; 2019</p>
+        <p id="u3080-3">&nbsp;</p>
+        <p>&nbsp;</p>
+       </div>
+       <div class="clip_frame grpelem" id="u3333"><!-- image -->
+        <img class="block" id="u3333_img" src="images/copyright.png?crc=3973042440" alt="" data-heightwidthratio="1" data-image-width="13" data-image-height="13"/>
+       </div>
       </div>
      </div>
     </div>
