--- a/prayer.html
+++ b/prayer.html
@@ -31,7 +31,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/dosis:n3,n7:default.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/iMtSejHAckkUpdgq7rQx1VyQAaiMZKhpp1AuLgFRN1MfeGXgfOPe9sJGwQwkFDqkFBvtZQ63wQJk5QbtFc935AwtjRqkZcZKFDJXjcbDZ2JXwUG_HKoTjAuC-AZ8jhyuScFGOcNkZkUTjAuC-AZ8jhyuScFGOcNkZkUaiaS0-ABlde8cZAFGiW4R-fozScSKgagzSYgTd1w7f6K4TbJbMg62JM4HgIuuShAbMLD_TpIB.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/mmMVr5EeExofhRVF8jyLa_n4VieURVBuwCR4_wTgGxbfeGXgfOPe9sJGwQwkFDqkFBvtZQ63wQJk5QbtFc935AwtjRqkZcZKFDJXjcbDZ2JXwUG_HKoTjAuC-AZ8jhyuScFGOcNkZkUTjAuC-AZ8jhyuScFGOcNkZkUaiaS0-ABlde8cZAFGiW4R-fozScSKgagzSYgTd1w7f6K4TbJbMg62JM4HgIuuShAbMpfLT0IB.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -47,9 +47,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div class="clip_frame grpelem" id="u4112"><!-- image -->
         <img class="block" id="u4112_img" src="images/life2.png?crc=4143500431" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51"/>
        </div>
-       <div class="clearfix grpelem" id="u4114-4"><!-- content -->
-        <p id="u4114-2"><span class="Menu-Buttons" id="u4114">ABOUT US</span></p>
-       </div>
+       <a class="nonblock nontext clearfix grpelem" id="u4114-4" href="about-us.html"><!-- content --><p id="u4114-2"><span class="Menu-Buttons" id="u4114">ABOUT US</span></p></a>
        <a class="nonblock nontext clearfix grpelem" id="u4105-4" href="get-involved.html"><!-- content --><p id="u4105-2"><span class="Menu-Buttons" id="u4105">GET INVOLVED</span></p></a>
        <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u4106-4" href="prayer.html"><!-- content --><p id="u4106-2"><span class="Menu-Buttons" id="u4106">PRAYER</span></p></a>
        <a class="nonblock nontext clearfix grpelem" id="u4115-4" href="testimony.html"><!-- content --><p id="u4115-2"><span class="Menu-Buttons" id="u4115">TESTIMONY</span></p></a>
