--- a/study.html
+++ b/study.html
@@ -24,11 +24,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3813440122"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4099980633"/>
-  <link rel="stylesheet" type="text/css" href="css/study.css?crc=464034099" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/study.css?crc=114305877" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=284682425"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_study.css?crc=4128488602" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_study.css?crc=3979758358" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -36,7 +36,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/dosis:n3,n7:default.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/5RfIVgNx7LdkA8RaYB1ike8zM-sobcf28IM30aGSKUCfeGXgfOPe9sJGwQwkFDqkFBvtZQ63wQJk5QbtFc935AwtjRqkZcZKFDJXjcbDZ2JXwUG_HKoTjAuC-AZ8jhyuScFGOcNkZkUTjAuC-AZ8jhyuScFGOcNkZkUaiaS0-ABlde8cZAFGiW4R-fozScSKgagzSYgTd1w7f6KPTbJbMg6YJM4HgIuuShAbML__TpIB.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/lqZSABkvF2_VtAMVqMp-VRT-mssrhM2cNHl6-qhv7OCfeGXgfOPe9sJGwQwkFDqkFBvtZQ63wQJk5QbtFc935AwtjRqkZcZKFDJXjcbDZ2JXwUG_HKoTjAuC-AZ8jhyuScFGOcNkZkUTjAuC-AZ8jhyuScFGOcNkZkUaiaS0-ABlde8cZAFGiW4R-fozScSKgagzSYgTd1w7f6KPTbJbMg6YJM4HgIuuShAbMpHLT0IB.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -53,9 +53,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <div class="clip_frame grpelem" id="u4112"><!-- image -->
          <img class="block temp_no_img_src" id="u4112_img" data-orig-src="images/life2.png?crc=4143500431" alt="" data-heightwidthratio="0.2537313432835821" data-image-width="201" data-image-height="51" src="images/blank.gif?crc=4208392903"/>
         </div>
-        <div class="clearfix grpelem shared_content" id="u4114-4" data-content-guid="u4114-4_content"><!-- content -->
-         <p id="u4114-2"><span class="Menu-Buttons" id="u4114">ABOUT US</span></p>
-        </div>
+        <a class="nonblock nontext clearfix grpelem shared_content" id="u4114-4" href="about-us.html" data-content-guid="u4114-4_content"><!-- content --><p id="u4114-2"><span class="Menu-Buttons" id="u4114">ABOUT US</span></p></a>
         <a class="nonblock nontext clearfix grpelem shared_content" id="u4105-4" href="get-involved.html" data-content-guid="u4105-4_content"><!-- content --><p id="u4105-2"><span class="Menu-Buttons" id="u4105">GET INVOLVED</span></p></a>
         <a class="nonblock nontext clearfix grpelem shared_content" id="u4106-4" href="prayer.html" data-content-guid="u4106-4_content"><!-- content --><p id="u4106-2"><span class="Menu-Buttons" id="u4106">PRAYER</span></p></a>
         <a class="nonblock nontext clearfix grpelem shared_content" id="u4115-4" href="testimony.html" data-content-guid="u4115-4_content"><!-- content --><p id="u4115-2"><span class="Menu-Buttons" id="u4115">TESTIMONY</span></p></a>
@@ -111,9 +109,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext clip_frame grpelem" id="u4066" href="https://www.facebook.com/iamlifechurchinternational"><!-- image --><img class="block temp_no_img_src" id="u4066_img" data-orig-src="images/facebook-logo-png-white-i6.png?crc=156772510" alt="" data-heightwidthratio="1" data-image-width="31" data-image-height="31" src="images/blank.gif?crc=4208392903"/></a>
      <a class="nonblock nontext clip_frame grpelem" id="u4068" href="https://www.youtube.com/channel/UC0j6LdYbIiEUvPGAGrfPJlg?"><!-- image --><img class="block temp_no_img_src" id="u4068_img" data-orig-src="images/youtube.png?crc=394888956" alt="" data-heightwidthratio="1" data-image-width="30" data-image-height="30" src="images/blank.gif?crc=4208392903"/></a>
      <a class="nonblock nontext clip_frame grpelem" id="u4070" href="index.html"><!-- image --><img class="block temp_no_img_src" id="u4070_img" data-orig-src="images/life2.png?crc=4143500431" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51" src="images/blank.gif?crc=4208392903"/></a>
-     <div class="clearfix grpelem shared_content" id="u4072-4" data-content-guid="u4072-4_content"><!-- content -->
-      <p id="u4072-2"><span class="Menu-Buttons" id="u4072">ABOUT US</span></p>
-     </div>
+     <a class="nonblock nontext clearfix grpelem shared_content" id="u4072-4" href="about-us.html" data-content-guid="u4072-4_content"><!-- content --><p id="u4072-2"><span class="Menu-Buttons" id="u4072">ABOUT US</span></p></a>
      <a class="nonblock nontext clearfix grpelem shared_content" id="u4073-4" href="testimony.html" data-content-guid="u4073-4_content"><!-- content --><p id="u4073-2"><span class="Menu-Buttons" id="u4073">TESTIMONY</span></p></a>
      <a class="nonblock nontext clearfix grpelem shared_content" id="u4074-4" href="events.html" data-content-guid="u4074-4_content"><!-- content --><p id="u4074-2"><span class="Menu-Buttons" id="u4074">EVENTS</span></p></a>
      <a class="nonblock nontext clearfix grpelem shared_content" id="u4075-4" href="prayer.html" data-content-guid="u4075-4_content"><!-- content --><p id="u4075-2"><span class="Menu-Buttons" id="u4075">CONTACT</span></p></a>
@@ -163,7 +159,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <div class="clip_frame grpelem temp_no_id" data-orig-id="u4112"><!-- image -->
          <img class="block temp_no_id temp_no_img_src" data-orig-src="images/life2.png?crc=4143500431" alt="" width="54" height="14" data-orig-id="u4112_img" src="images/blank.gif?crc=4208392903"/>
         </div>
-        <span class="clearfix grpelem placeholder" data-placeholder-for="u4114-4_content"><!-- placeholder node --></span>
+        <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u4114-4_content"><!-- placeholder node --></span>
         <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u4115-4_content"><!-- placeholder node --></span>
         <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u4116-4_content"><!-- placeholder node --></span>
         <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u4117-4_content"><!-- placeholder node --></span>
@@ -176,7 +172,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <a class="nonblock nontext clip_frame grpelem temp_no_id" href="https://www.facebook.com/iamlifechurchinternational" data-orig-id="u4066"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/facebook-logo-png-white-i6.png?crc=156772510" alt="" width="8" height="8" data-orig-id="u4066_img" src="images/blank.gif?crc=4208392903"/></a>
         <a class="nonblock nontext clip_frame grpelem temp_no_id" href="https://www.youtube.com/channel/UC0j6LdYbIiEUvPGAGrfPJlg?" data-orig-id="u4068"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/youtube.png?crc=394888956" alt="" width="8" height="8" data-orig-id="u4068_img" src="images/blank.gif?crc=4208392903"/></a>
         <a class="nonblock nontext clip_frame grpelem temp_no_id" href="index.html" data-orig-id="u4070"><!-- image --><img class="block temp_no_id temp_no_img_src" data-orig-src="images/life2.png?crc=4143500431" alt="" width="54" height="14" data-orig-id="u4070_img" src="images/blank.gif?crc=4208392903"/></a>
-        <span class="clearfix grpelem placeholder" data-placeholder-for="u4072-4_content"><!-- placeholder node --></span>
+        <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u4072-4_content"><!-- placeholder node --></span>
         <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u4073-4_content"><!-- placeholder node --></span>
         <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u4074-4_content"><!-- placeholder node --></span>
         <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u4075-4_content"><!-- placeholder node --></span>
