--- a/contact-us.html
+++ b/contact-us.html
@@ -45,7 +45,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="clip_frame grpelem" id="u4112"><!-- image -->
        <img class="block" id="u4112_img" src="images/life2.png?crc=4143500431" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51"/>
       </div>
-      <a class="nonblock nontext clearfix grpelem" id="u4114-4" href="about-us.html"><!-- content --><p id="u4114-2"><span class="Menu-Buttons" id="u4114">ABOUT US</span></p></a>
+      <div class="clearfix grpelem" id="u4114-4"><!-- content -->
+       <p id="u4114-2"><span class="Menu-Buttons" id="u4114">ABOUT US</span></p>
+      </div>
       <a class="nonblock nontext clearfix grpelem" id="u4105-4" href="get-involved.html"><!-- content --><p id="u4105-2"><span class="Menu-Buttons" id="u4105">GET INVOLVED</span></p></a>
       <a class="nonblock nontext clearfix grpelem" id="u4106-4" href="prayer.html"><!-- content --><p id="u4106-2"><span class="Menu-Buttons" id="u4106">PRAYER</span></p></a>
       <a class="nonblock nontext clearfix grpelem" id="u4115-4" href="testimony.html"><!-- content --><p id="u4115-2"><span class="Menu-Buttons" id="u4115">TESTIMONY</span></p></a>
