--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   
   <link media="only screen and (max-width: 370px)" rel="alternate" href="http://iamlifechurch.org/phone/index.html"/>
+  <link rel="shortcut icon" href="images/home-favicon.ico?crc=103988463"/>
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3813440122"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4099980633"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3935023656" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=134655102" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=284682425" id="nomq_pagesheet"/>
@@ -35,7 +36,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/dosis:n3,n7:default.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/RqtdsLSoIbBS0aC3YneyU0FmrkyHbQ-Y6nPrlNNuXctfenXgfOPe9sJGwQwkFDqkFBvtZQ63wQJk5QbtFc935AwtjRqkZcZKFDJXjcbDZ2JXwUG_HKoTjAuC-AZ8jhyuScFGOcNkZkUTjAuC-AZ8jhyuScFGOcNkZkUaiaS0-ABlde8cZAFGiW4R-fozScSKgagzSYgTd1w7f6K4TbJbMg62JMJ7f6KPTbJbMg6YJMJ7f6K5TbJbMg6BJMJ7f6KHTbJbMg6FJMJ7f6K9TbJbMg6JJM4HgIuuShAbMp5LT0IB.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/f1_tbABPPecdTNLOmeu7F4tgocNp54yi5AAIXl8DzewfenXgfOPe9sJGwQwkFDqkFBvtZQ63wQJk5QbtFc935AwtjRqkZcZKFDJXjcbDZ2JXwUG_HKoTjAuC-AZ8jhyuScFGOcNkZkUTjAuC-AZ8jhyuScFGOcNkZkUaiaS0-ABlde8cZAFGiW4R-fozScSKgagzSYgTd1w7f6K4TbJbMg62JMJ7f6KPTbJbMg6YJMJ7f6K5TbJbMg6BJMJ7f6KHTbJbMg6FJMJ7f6K9TbJbMg6JJM4HgIuuShAbMpPUT0IB.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -58,7 +59,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <div class="clip_frame grpelem" id="u4112"><!-- image -->
          <img class="block" id="u4112_img" src="images/life2.png?crc=4143500431" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51"/>
         </div>
-        <a class="nonblock nontext clearfix grpelem" id="u4114-4" href="about-us.html"><!-- content --><p id="u4114-2"><span class="Menu-Buttons" id="u4114">ABOUT US</span></p></a>
+        <div class="clearfix grpelem" id="u4114-4"><!-- content -->
+         <p id="u4114-2"><span class="Menu-Buttons" id="u4114">ABOUT US</span></p>
+        </div>
         <a class="nonblock nontext clearfix grpelem" id="u4105-4" href="get-involved.html"><!-- content --><p id="u4105-2"><span class="Menu-Buttons" id="u4105">GET INVOLVED</span></p></a>
         <a class="nonblock nontext clearfix grpelem" id="u4106-4" href="prayer.html"><!-- content --><p id="u4106-2"><span class="Menu-Buttons" id="u4106">PRAYER</span></p></a>
         <a class="nonblock nontext clearfix grpelem" id="u4115-4" href="testimony.html"><!-- content --><p id="u4115-2"><span class="Menu-Buttons" id="u4115">TESTIMONY</span></p></a>
@@ -93,8 +96,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <p>SUNDAY MORNINGS @ 10 AM</p>
      </div>
      <a class="nonblock nontext grpelem" id="u5689" href="study.html"><!-- state-based BG images --><div class="fluid_height_spacer"></div></a>
-     <a class="nonblock nontext grpelem" id="u5662" href="testimony.html"><!-- rasterized frame --><img id="u5662_img" alt="" src="images/testify1-u5662.png?crc=339134378" data-image-width="173"/></a>
-     <a class="nonblock nontext grpelem" id="u5653" href="get-involved.html"><!-- rasterized frame --><img id="u5653_img" alt="" src="images/serve1-u5653.png?crc=525546933" data-image-width="154"/></a>
+     <a class="nonblock nontext grpelem" id="u5662" href="testimony.html"><!-- state-based BG images --><div class="fluid_height_spacer"></div></a>
+     <a class="nonblock nontext grpelem" id="u5653" href="get-involved.html"><!-- state-based BG images --><div class="fluid_height_spacer"></div></a>
      <img class="grpelem" id="u5740-4" alt="INTERNATIONAL" src="images/u5740-4.png?crc=3882501394" data-image-width="424"/><!-- rasterized frame -->
      <a class="nonblock nontext clearfix grpelem" id="u6234-4" href="get-involved.html"><!-- content --><p id="u6234-2"><span class="Menu-Buttons" id="u6234">GET INVOLVED</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u6235-4" href="prayer.html"><!-- content --><p id="u6235-2"><span class="Menu-Buttons" id="u6235">PRAYER</span></p></a>
@@ -187,7 +190,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    </div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/u5689-r.png?crc=4259863132" alt=""/>
+   <img class="preload" src="images/u5689-r.png?crc=4029909715" alt=""/>
+   <img class="preload" src="images/u5662-r.png?crc=4267189841" alt=""/>
+   <img class="preload" src="images/u5653-r.png?crc=4288766466" alt=""/>
   </div>
   <!-- JS includes -->
   <script type="text/javascript">
