--- a/study.html
+++ b/study.html
@@ -36,7 +36,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/dosis:n3,n7:default.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/lqZSABkvF2_VtAMVqMp-VRT-mssrhM2cNHl6-qhv7OCfeGXgfOPe9sJGwQwkFDqkFBvtZQ63wQJk5QbtFc935AwtjRqkZcZKFDJXjcbDZ2JXwUG_HKoTjAuC-AZ8jhyuScFGOcNkZkUTjAuC-AZ8jhyuScFGOcNkZkUaiaS0-ABlde8cZAFGiW4R-fozScSKgagzSYgTd1w7f6KPTbJbMg6YJM4HgIuuShAbMpHLT0IB.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/QZExocum_TrSOQBAC3f6oVwVHbIZixnc9TF06CVvk_vfeGXgfOPe9sJGwQwkFDqkFBvtZQ63wQJk5QbtFc935AwtjRqkZcZKFDJXjcbDZ2JXwUG_HKoTjAuC-AZ8jhyuScFGOcNkZkUTjAuC-AZ8jhyuScFGOcNkZkUaiaS0-ABlde8cZAFGiW4R-fozScSKgagzSYgTd1w7f6KPTbJbMg6YJM4HgIuuShAbMpHUT0IB.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -53,7 +53,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <div class="clip_frame grpelem" id="u4112"><!-- image -->
          <img class="block temp_no_img_src" id="u4112_img" data-orig-src="images/life2.png?crc=4143500431" alt="" data-heightwidthratio="0.2537313432835821" data-image-width="201" data-image-height="51" src="images/blank.gif?crc=4208392903"/>
         </div>
-        <a class="nonblock nontext clearfix grpelem shared_content" id="u4114-4" href="about-us.html" data-content-guid="u4114-4_content"><!-- content --><p id="u4114-2"><span class="Menu-Buttons" id="u4114">ABOUT US</span></p></a>
+        <div class="clearfix grpelem shared_content" id="u4114-4" data-content-guid="u4114-4_content"><!-- content -->
+         <p id="u4114-2"><span class="Menu-Buttons" id="u4114">ABOUT US</span></p>
+        </div>
         <a class="nonblock nontext clearfix grpelem shared_content" id="u4105-4" href="get-involved.html" data-content-guid="u4105-4_content"><!-- content --><p id="u4105-2"><span class="Menu-Buttons" id="u4105">GET INVOLVED</span></p></a>
         <a class="nonblock nontext clearfix grpelem shared_content" id="u4106-4" href="prayer.html" data-content-guid="u4106-4_content"><!-- content --><p id="u4106-2"><span class="Menu-Buttons" id="u4106">PRAYER</span></p></a>
         <a class="nonblock nontext clearfix grpelem shared_content" id="u4115-4" href="testimony.html" data-content-guid="u4115-4_content"><!-- content --><p id="u4115-2"><span class="Menu-Buttons" id="u4115">TESTIMONY</span></p></a>
@@ -159,7 +161,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <div class="clip_frame grpelem temp_no_id" data-orig-id="u4112"><!-- image -->
          <img class="block temp_no_id temp_no_img_src" data-orig-src="images/life2.png?crc=4143500431" alt="" width="54" height="14" data-orig-id="u4112_img" src="images/blank.gif?crc=4208392903"/>
         </div>
-        <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u4114-4_content"><!-- placeholder node --></span>
+        <span class="clearfix grpelem placeholder" data-placeholder-for="u4114-4_content"><!-- placeholder node --></span>
         <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u4115-4_content"><!-- placeholder node --></span>
         <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u4116-4_content"><!-- placeholder node --></span>
         <span class="nonblock nontext clearfix grpelem placeholder" data-placeholder-for="u4117-4_content"><!-- placeholder node --></span>
